--- a/baltics-framework-all/pom.xml
+++ b/baltics-framework-all/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>baltics-designpattern-spring-boot-starter</module>
         <module>baltics-base-spring-boot-starter</module>
+        <module>baltics-cache-spring-boot-starter</module>
     </modules>
 
     <properties>
