--- a/baltics-aggregation/pom.xml
+++ b/baltics-aggregation/pom.xml
@@ -9,18 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>baltics-framework-all</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>baltics-designpattern-spring-boot-starter</module>
-        <module>baltics-base-spring-boot-starter</module>
-        <module>baltics-cache-spring-boot-starter</module>
-        <module>baltics-mail-spring-boot-starter</module>
-    </modules>
+    <artifactId>baltics-aggregation</artifactId>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-designpattern-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
