--- a/baltics-framework-all/baltics-web-spring-boot-starter/pom.xml
+++ b/baltics-framework-all/baltics-web-spring-boot-starter/pom.xml
@@ -9,24 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>baltics-cache-spring-boot-starter</artifactId>
+    <artifactId>baltics-web-spring-boot-starter</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-convention-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2</artifactId>
-            <version>2.0.43</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.baltics</groupId>
-            <artifactId>baltics-convention-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 
 </project>
