--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>baltics-framework-all</module>
         <module>baltics-front</module>
         <module>baltics-aggregation</module>
+        <module>baltics-order</module>
+        <module>baltics-customer</module>
     </modules>
 
     <properties>
@@ -33,6 +35,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.7.18</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
             <version>2.7.18</version>
         </dependency>
     </dependencies>
