修改了token工具

--- a/baltics-framework-all/baltics-common-spring-boot-starter/pom.xml
+++ b/baltics-framework-all/baltics-common-spring-boot-starter/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-convention-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
