--- a/baltics-aggregation/pom.xml
+++ b/baltics-aggregation/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>baltics-aggregation</artifactId>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -27,6 +27,11 @@
             <artifactId>baltics-cache-spring-boot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-customer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -36,6 +41,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.17</version>
                 <executions>
                     <execution>
                         <goals>
