--- a/baltics-framework-all/baltics-web-spring-boot-starter/pom.xml
+++ b/baltics-framework-all/baltics-web-spring-boot-starter/pom.xml
@@ -17,11 +17,17 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-common-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
 </project>
