--- a/baltics-framework-all/baltics-common-spring-boot-starter/pom.xml
+++ b/baltics-framework-all/baltics-common-spring-boot-starter/pom.xml
@@ -18,9 +18,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.3.0</version>
         </dependency>
         <dependency>
             <groupId>cn.baltics</groupId>
