--- a/baltics-framework-all/baltics-web-spring-boot-starter/pom.xml
+++ b/baltics-framework-all/baltics-web-spring-boot-starter/pom.xml
@@ -23,6 +23,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-customer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
