--- a/baltics-aggregation/pom.xml
+++ b/baltics-aggregation/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
         <dependency>
             <groupId>cn.baltics</groupId>
+            <artifactId>baltics-web-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
             <artifactId>baltics-customer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
