--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>baltics-aggregation</module>
         <module>baltics-order</module>
         <module>baltics-customer</module>
+        <module>baltics-shop</module>
     </modules>
 
     <properties>
