--- a/baltics-framework-all/baltics-framework-core/pom.xml
+++ b/baltics-framework-all/baltics-framework-core/pom.xml
@@ -16,4 +16,47 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-base-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-cache-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-common-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-convention-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-designpattern-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-distributedid-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-mail-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-web-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
