--- a/baltics-framework-all/baltics-cache-spring-boot-starter/pom.xml
+++ b/baltics-framework-all/baltics-cache-spring-boot-starter/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>baltics-convention-spring-boot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
     </dependencies>
 
 </project>
