--- a/baltics-aggregation/pom.xml
+++ b/baltics-aggregation/pom.xml
@@ -19,22 +19,17 @@
     <dependencies>
         <dependency>
             <groupId>cn.baltics</groupId>
-            <artifactId>baltics-designpattern-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.baltics</groupId>
-            <artifactId>baltics-cache-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.baltics</groupId>
-            <artifactId>baltics-web-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.baltics</groupId>
             <artifactId>baltics-customer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-order</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.baltics</groupId>
+            <artifactId>baltics-shop</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
